tests/errors/semantics/call_on_nonconstants_require_all_args.odl
main :: () -> void {
    add :: (a: int, b := 0, c := 0) -> int {
        return a + b + c;
    };

    myadd := add;
    s := myadd(1);
    printint(s);
    println();
};
